[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/bots/tex_generic_bot_leg.png" type="Texture" id=1]
[ext_resource path="res://scenes/bots/player/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/bots/_base/_BaseBot.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/tex_bar.png" type="Texture" id=4]
[ext_resource path="res://scenes/bots/_base/BotExplosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/bots/sfx_Player_Charge_Ready.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/bots/tex_player.png" type="Texture" id=7]
[ext_resource path="res://assets/weapons/sfx_Weap_Almost_Overheating.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/global/camera with shake/Camera2D.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/player/PlayerUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/weapons/blaster/BuiltInAutoBlaster.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.913725, 0.639216, 0.0588235, 1 ), Color( 0.960784, 0.0901961, 0, 1 ), Color( 0.913725, 0.639216, 0.0588235, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true

[node name="Player" instance=ExtResource( 3 )]
script = ExtResource( 2 )
faction = Color( 0, 1, 0, 1 )

[node name="Sprite" parent="Legs" index="0"]
modulate = Color( 0.372549, 0.380392, 0.803922, 1 )
texture = ExtResource( 1 )
offset = Vector2( 14, 1 )

[node name="Texture" parent="Body" index="1"]
texture = ExtResource( 7 )
polygon = PoolVector2Array( 32.7387, -9.53674e-06, 31.6257, 8.47932, 28.3518, 16.3694, 23.1463, 23.1463, 16.3694, 28.3518, 8.47934, 31.6256, 1.90735e-06, 32.7387, -8.47934, 31.6256, -16.3694, 28.3518, -23.1463, 23.1463, -28.3518, 16.3694, -31.6256, 8.47932, -32.7388, -9.53674e-06, -31.6256, -8.47935, -28.3518, -16.3694, -23.1463, -23.1463, -16.3694, -28.3518, -8.47934, -31.6257, 1.90735e-06, -32.7388, 8.47934, -31.6257, 16.3694, -28.3518, 23.1463, -23.1463, 28.3518, -16.3694, 31.6257, -8.47935, 16.3694, 26.6002, 6.13852, 29.6695, -6.13852, 29.6695, -16.3694, 26.6002, 24.5541, 18.4156, 14.3232, 22.5079, 1.90735e-06, 24.5541, -14.3232, 22.5079, -24.5541, 18.4156, -28.6464, 10.2309, -22.5079, 12.277, -8.18469, 14.3232, 8.18468, 14.3232, 22.5079, 12.277, 28.6464, 10.2309, -30.6926, -9.53674e-06, -26.6002, -9.53674e-06, -16.3694, -9.53674e-06, 1.90735e-06, -9.53674e-06, 16.3694, -9.53674e-06, 26.6002, -9.53674e-06, 30.6926, -9.53674e-06, 28.6464, -10.2309, 22.5079, -12.277, 8.18468, -14.3232, -8.18469, -14.3232, -22.5079, -12.277, -28.6464, -10.2309, 24.5541, -18.4156, 14.3232, -22.5079, 1.90735e-06, -24.5541, -14.3232, -22.5079, -24.5541, -18.4156, -16.3694, -26.6003, -6.13852, -29.6695, 6.13852, -29.6695, 16.3694, -26.6003 )
uv = PoolVector2Array( 71.9183, 32, 66.9285, 39.9837, 61.9387, 47.9673, 56.949, 55.951, 51.9591, 63.9346, 41.9796, 63.9346, 32, 63.9346, 22.0204, 63.9346, 12.0409, 63.9346, 7.05105, 55.951, 2.06126, 47.9673, -2.92852, 39.9837, -7.91831, 32, -2.92852, 24.0163, 2.06126, 16.0327, 7.05105, 8.04901, 12.0409, 0.0653458, 22.0204, 0.0653458, 32, 0.0653458, 41.9796, 0.0653458, 51.9591, 0.0653458, 56.949, 8.04901, 61.9387, 16.0327, 66.9285, 24.0163, 46.9694, 55.951, 36.9898, 55.951, 27.0102, 55.951, 17.0306, 55.951, 51.9591, 47.9673, 41.9796, 47.9673, 32, 47.9673, 22.0204, 47.9673, 12.0409, 47.9673, 7.05104, 39.9837, 17.0306, 39.9837, 27.0102, 39.9837, 36.9898, 39.9837, 46.9694, 39.9837, 56.949, 39.9837, 2.06125, 32, 12.0409, 32, 22.0204, 32, 32, 32, 41.9796, 32, 51.9591, 32, 61.9387, 32, 56.949, 24.0163, 46.9694, 24.0163, 36.9898, 24.0163, 27.0102, 24.0163, 17.0306, 24.0163, 7.05104, 24.0163, 51.9591, 16.0327, 41.9796, 16.0327, 32, 16.0327, 22.0204, 16.0327, 12.0409, 16.0327, 17.0306, 8.04901, 27.0102, 8.04901, 36.9898, 8.04901, 46.9694, 8.04901 )

[node name="WeaponHeat" type="TextureProgress" parent="Bars" index="2"]
modulate = Color( 0.913725, 0.639216, 0.0588235, 1 )
margin_top = 32.0
margin_right = 50.0
margin_bottom = 30.0
rect_rotation = -90.0
rect_scale = Vector2( 0.42, 1 )
rounded = true
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="Bars/WeaponHeat" index="0"]
anims/too_much_heat = SubResource( 1 )

[node name="ChargeLevel" type="TextureProgress" parent="Bars" index="3"]
modulate = Color( 1, 0.239216, 0.878431, 1 )
margin_top = 32.0
margin_right = 50.0
margin_bottom = 30.0
rect_rotation = -90.0
rect_scale = Vector2( 0.42, 1 )
value = 100.0
rounded = true
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChargeTween" type="Tween" parent="Bars/ChargeLevel" index="0"]

[node name="ChargeTweenTimer" type="Timer" parent="Bars/ChargeLevel" index="1"]
one_shot = true

[node name="ChargeReady" type="AudioStreamPlayer2D" parent="Sounds" index="6"]
stream = ExtResource( 6 )

[node name="CloseToOverheating" type="AudioStreamPlayer2D" parent="Sounds" index="7"]
stream = ExtResource( 8 )

[node name="Camera2D" parent="." index="6" instance=ExtResource( 9 )]
current = true

[node name="CollisionShape" parent="." index="9"]
shape = SubResource( 2 )

[node name="Items" type="Node2D" parent="." index="10"]

[node name="Passives" type="Node2D" parent="." index="11"]

[node name="BuiltInAutoBlaster" parent="Weapons" index="0" instance=ExtResource( 12 )]

[node name="Explosion" parent="." index="13" instance=ExtResource( 5 )]

[node name="PlayerUI" parent="." index="14" instance=ExtResource( 10 )]
[connection signal="timeout" from="Bars/ChargeLevel/ChargeTweenTimer" to="." method="_on_ChargeTweenTimer_timeout"]
